use pkgconfig to find QtXMLRpc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Network Xml REQUIRED)
+pkg_check_modules(QTXMLRPC REQUIRED QtXMLRpc>=1.0.0)
 
 set(source_files QOdoo.cpp QOdooProduct.cpp QOdooPartner.cpp QOdooInvoice.cpp QOdooInvoiceLine.cpp)
 set(header_files QOdoo.h   QOdooProduct.h   QOdooPartner.h   QOdooInvoice.h   QOdooInvoiceLine.h)
