--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,27 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(PkgConfig)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Network Xml REQUIRED)
 pkg_check_modules(QTXMLRPC REQUIRED QtXMLRpc>=1.0.0)
 
-set(source_files QOdoo.cpp QOdooProduct.cpp QOdooPartner.cpp QOdooInvoice.cpp QOdooInvoiceLine.cpp)
-set(header_files QOdoo.h   QOdooProduct.h   QOdooPartner.h   QOdooInvoice.h   QOdooInvoiceLine.h)
+set(source_files
+	QOdoo.cpp
+	QOdooProduct.cpp
+	QOdooPartner.cpp
+	QOdooInvoice.cpp
+	QOdooInvoiceLine.cpp
+	QOdooCollection.cpp)
+set(header_files
+	QOdoo.h
+	QOdooProduct.h
+	QOdooPartner.h
+	QOdooInvoice.h
+	QOdooInvoiceLine.h
+	QOdooCollection.h
+        QOdooModel.h
+        QOdooSearchQuery.h)
 
 add_library(QtOdoo SHARED ${source_files} ${header_files})
 target_link_libraries(QtOdoo PRIVATE
