makes pkgconfig optional by allowing user to manually define the dependencies linking details

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(PkgConfig)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Network Xml REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Quick)
-#pkg_check_modules(QTXMLRPC REQUIRED Qt${QT_VERSION_MAJOR}XMLRpc>=1.0.0)
+if (NOT DEFINED QTXMLRPC_LIBRARIES)
+  pkg_check_modules(QTXMLRPC REQUIRED Qt${QT_VERSION_MAJOR}XMLRpc>=1.0.0)
+endif()
 
 message("Building ${PROJECT_NAME} using Qt${QT_VERSION_MAJOR}")
 set(TARGET_NAME "Qt${QT_VERSION_MAJOR}Odoo")
